--- a/faq.html
+++ b/faq.html
@@ -2,7 +2,16 @@
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>FAQ</title>
 <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
-<meta property="og:image" content="img/top.png">
+<link rel="canonical" href="https://es-ai-site.vercel.app/faq.html">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="業務AIレシピ集">
+<meta property="og:title" content="FAQ">
+<meta property="og:description" content="AI活用の安全性・権利・品質など、よくある疑問に回答。">
+<meta property="og:url" content="https://es-ai-site.vercel.app/faq.html">
+<meta property="og:image" content="https://es-ai-site.vercel.app/img/top.png">
+<meta property="og:image:secure_url" content="https://es-ai-site.vercel.app/img/top.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="assets/css/base.css"></head><body>
 <a class="skip" href="#main">本文へスキップ</a>
