fix(ogp): provide 1200x630 JPEG (img/top-ogp.jpg) and point OG/Twitter image to it; add image type/alt

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 <meta property="og:title" content="業務AIレシピ集 | トップ">
 <meta property="og:description" content="検索はやめて“訊く”。AIで、毎日を軽くする。テンプレと手順で再現性を高める業務AIのレシピ。">
 <meta property="og:url" content="https://es-ai-site.vercel.app/">
-<meta property="og:image" content="https://es-ai-site.vercel.app/img/top.png">
-<meta property="og:image:secure_url" content="https://es-ai-site.vercel.app/img/top.png">
+<meta property="og:image" content="https://es-ai-site.vercel.app/img/top-ogp.jpg">
+<meta property="og:image:secure_url" content="https://es-ai-site.vercel.app/img/top-ogp.jpg">
+<meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="業務AIレシピ集のカバーイメージ">
 <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://es-ai-site.vercel.app/img/top-ogp.jpg">
 <link rel="stylesheet" href="assets/css/base.css">
 </head><body>
 <a class="skip" href="#main">本文へスキップ</a>
