--- a/faq.html
+++ b/faq.html
@@ -8,11 +8,14 @@
 <meta property="og:title" content="FAQ">
 <meta property="og:description" content="AI活用の安全性・権利・品質など、よくある疑問に回答。">
 <meta property="og:url" content="https://es-ai-site.vercel.app/faq.html">
-<meta property="og:image" content="https://es-ai-site.vercel.app/img/top.png">
-<meta property="og:image:secure_url" content="https://es-ai-site.vercel.app/img/top.png">
+<meta property="og:image" content="https://es-ai-site.vercel.app/img/top-ogp.jpg">
+<meta property="og:image:secure_url" content="https://es-ai-site.vercel.app/img/top-ogp.jpg">
+<meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="業務AIレシピ集のカバーイメージ">
 <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://es-ai-site.vercel.app/img/top-ogp.jpg">
 <link rel="stylesheet" href="assets/css/base.css"></head><body>
 <a class="skip" href="#main">本文へスキップ</a>
 <header class="site-header">
