--- a/templates.html
+++ b/templates.html
@@ -8,11 +8,14 @@
 <meta property="og:title" content="テンプレ集">
 <meta property="og:description" content="1分で使える業務AIテンプレ。コピーボタンでサッと試せます。">
 <meta property="og:url" content="https://es-ai-site.vercel.app/templates.html">
-<meta property="og:image" content="https://es-ai-site.vercel.app/img/top.png">
-<meta property="og:image:secure_url" content="https://es-ai-site.vercel.app/img/top.png">
+<meta property="og:image" content="https://es-ai-site.vercel.app/img/top-ogp.jpg">
+<meta property="og:image:secure_url" content="https://es-ai-site.vercel.app/img/top-ogp.jpg">
+<meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="業務AIレシピ集のカバーイメージ">
 <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://es-ai-site.vercel.app/img/top-ogp.jpg">
 <link rel="stylesheet" href="assets/css/base.css"></head><body>
 <a class="skip" href="#main">本文へスキップ</a>
 <header class="site-header">
